--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "Bolaji Olajide",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.5.1"
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
