--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.5.1",
+    "koa-ejs": "^4.1.1",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
